# DBManagere

./: main.py  pyproject.toml
src/: DBManager.py  HH.py  config.py  vacancy.py
